<resources>
    <string name="app_name">ConfidenceSecretBeta</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    // For dialog rating
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>

    <string name="st_notification">Notification</string>
    <string name="st_profile">Profile</string>
    <string name="st_sync">Sync cloud</string>
    <string name="st_share">Share</string>
    <string name="st_rating">Rating</string>
    <string name="st_report">Report &amp; Feedback</string>
    <string name="st_about">About</string>
    <string name="st_settings">Settings</string>
    <string name="st_setting_sc_title">Security</string>
    <string name="st_setting_sc_enlock">Enable lock</string>
    <string name="st_setting_sc_encrypt">Encrypt content</string>
    <string name="st_setting_lang_title">Language</string>

    <string name="google_map_api_key">AIzaSyDvCosN-ERLGio0pRq2qE8vhyDK0_Eiyks</string>
    <string name="facebook_app_id">705955636263423</string>
</resources>
