<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_active_black_18dp"
            android:title="@string/st_notification" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_portrait_black_18dp"
            android:title="@string/st_profile" />
        <item
            android:id="@+id/nav_sync_cloud"
            android:icon="@drawable/ic_cloud_upload_black_18dp"
            android:title="@string/st_sync" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_18dp"
            android:title="@string/st_settings"/>
    </group>

    <item android:title="Communicate"
        android:id="@+id/gnav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_18dp"
                android:title="@string/st_share" />
        </menu>
    </item>

    <item android:title="Information"
        android:id="@+id/gnav_info" >
        <menu>
            <item
                android:id="@+id/nav_rating"
                android:title="@string/st_rating"
                android:icon="@drawable/ic_star_rate_black_18dp"></item>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/st_report"
                android:icon="@drawable/ic_flag_black_18dp"></item>
            <item
                android:id="@+id/nav_about"
                android:title="@string/st_about"
                android:icon="@drawable/ic_info_black_18dp"></item>
        </menu>
    </item>

</menu>
